# StarKirby

./: CMakeLists.txt  README.md  main.cpp
assets/Kirby/: KeyChain004.smd
src/animation/: Animation.cpp  Animation.h
src/const/: Constants.h
src/core/: EnemyManager.cpp  EnemyManager.h  GameLoop.cpp  GameLoop.h  KirbyManager.cpp  KirbyManager.h  ScoreManager.cpp  ScoreManager.h
src/entity/Character/: MyKirby.cpp  MyKirby.h
src/entity/Enemy/: Enemy.cpp  Enemy.h  FlyEnemy.cpp  FlyEnemy.h  PlantEnemy.cpp  PlantEnemy.h  SparkEnemy.cpp  SparkEnemy.h
src/scene/: Background.cpp  Background.h  Barrier.cpp  Barrier.h  BaseState.h  StateManager.h
